[tool.poetry]
name = "assistants"
version = "0.1.0"
description = ""
authors = ["Leopoldo Garcia Vargas <lk13.dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
chainlit = "^1.0.200"
openai = "^1.2.3"
pydantic = "^2.5.3"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
ruff = "^0.1.14"
#pyright = "^1.1.348"

#[tool.pyright]
## https://github.com/microsoft/pyright/blob/main/docs/configuration.md
#useLibraryCodeForTypes = true
#exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
exclude = ['nowisthetime/prompts.py']
target-version = "py310"

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

